<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.andy.complain.uis.AddComplain">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/company_name" />
                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_complain_companyName" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/compain_subject" />
                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_complain_complainSubject" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/complaint_details" />

                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:id="@+id/et_complain_complianDetails" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/category" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/category" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView

                    android:text="@string/country"
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/country" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/zip_code" />
                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_complain_zipCode" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/city" />
                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_complain_city" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/websites" />
                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_complain_website" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation" />
                <TextView
                    android:id="@+id/tx_confirmation"
                    android:textSize="32sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:paddingTop="20dp"
                    android:background="@drawable/shape_complain"
                    android:id="@+id/et_complain_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:layout_marginTop="10dp"
                android:text="@string/submit"
                android:id="@+id/btn_complain_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
